Fix alignment

--- a/css/back/global.less
+++ b/css/back/global.less
@@ -182,7 +182,7 @@ body {
 
             button[type="button"] {
                 &.align-center {
-                    transform: translateY(100%);
+                    transform: translateY(110%);
                     position: relative;
                 }
             }
